# rust-bindgen-prost-wkt-reproducer

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  repro.sh  rust-toolchain.toml
.github/workflows/: check.yml
src/: main.rs
