[package]
name = "rust-bindgen-prost-wkt-reproducer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["arbitrary", "serde"] }
prost-wkt-types = "0.6"
prost = "0.13.5"

[build-dependencies]
tonic-build = {  version = "0.12.3", default-features = false, features = [
    "prost",
] }
